--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>CAMmill - 2D CAM tool for Linux/BSD, Windows and Mac OS X</title>title>
+    <title>CAMmill - 2D CAM tool for Linux/BSD, Windows and Mac OS X</title>
     <meta property="og:title" content="CAMmill" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://cammill.github.io" />
