add old sites to ./de

--- a/index.html
+++ b/index.html
@@ -1,13 +1,96 @@
-<!DOCTYPE html>
+<HTML>
+<HEAD>
+<STYLE>
+	body {
+		background-color: #000000;
+		background-image: url('de/bg.png');
+		color: #FFFFFF;
+	}
+	a {
+		color: #FFFFFF;
+	}
+</STYLE>
+</HEAD>
+<BODY>
+<IMG src="de/logo.png">
+<HR>
+<A href="de/cammill.png"><IMG width="600px" src="de/cammill.png" align="right"></A>
+<H2>Features</H2>
+	<LI>Automatic Offsets (Inside / Outside)
+	<LI>Normal and Climb milling
+	<LI>Rotary-Axis Support
+	<LI>Laser-Mode (inc. Offsets)
+	<LI>Tool/Material calculations for feedrate and tool-speed
+	<LI>Holding-Tab's
+	<LI>Support for milling MTEXT from dxf
+	<LI>LinuxCNC-Tooltable import
+	<LI>Setup-Presets
+	<LI>Post-Processor (with lua-script / compatible with sheetcam-tng)
+	<LI>Running under Linux and Mac-OSX (and maybe other Unix-Like Systems)
+	<LI>.....
 
-<html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>CAMmill - 2D CAM tool for Linux/BSD, Windows and Mac OS X</title>
-    <meta property="og:title" content="CAMmill" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://cammill.github.io" />
-  </head>
-  <body>
-  </body>
-</html>
+
+<BR><BR><BR><BR><BR><BR><BR><BR><BR><BR>
+<HR>
+<H2>Documentation (German)</H2>
+<A href="de/tools.html">Tools</A><BR>
+<A href="de/milling.html">Milling</A><BR>
+<A href="de/holdings-tabs.html">Holding-Tab's</A><BR>
+<A href="de/rotary-mode.html">Rotary-Mode</A><BR>
+<A href="de/machine.html">Machine</A><BR>
+<A href="de/objects.html">Objects</A><BR>
+<A href="de/cmdline.html">Commandline-Options</A><BR>
+
+<HR>
+<H2>Screenshots</H2>
+
+<BLOCKQUOTE>
+<TABLE border="0" width="90%">
+<TR><TD>
+
+<B>Mainview</B><BR>
+<A href="de/sc_main.png"><IMG width="300px" src="de/sc_main.png"></A>
+
+</TD><TD>
+
+<B>Rotary-Mode / 4. Axis</B><BR>
+<A href="de/sc_rotary.png"><IMG width="300px" src="de/sc_rotary.png"></A>
+
+</TD><TD>
+
+<B>Holding-Tab's</B><BR>
+<A href="de/sc_tabgrid.png"><IMG width="300px" src="de/sc_tabgrid.png"></A>
+
+</TD></TR><TR><TD>
+
+<B>Postprocessor-Output</B><BR>
+<A href="de/sc_output.png"><IMG width="300px" src="de/sc_output.png"></A>
+
+</TD><TD>
+
+<B>Postprocessor-Script</B><BR>
+<A href="de/sc_post.png"><IMG width="300px" src="de/sc_post.png"></A>
+
+</TD><TD>
+
+<B>Output in Linux-CNC</B><BR>
+<A href="de/sc_linuxcnc.png"><IMG width="300px" src="de/sc_linuxcnc.png"></A>
+
+
+</TD></TR>
+</TABLE>
+</BLOCKQUOTE>
+<HR>
+<H2>Downloads</H2>
+<A href="https://github.com/cammill/cammill">Sources</A><BR>
+<BR>
+<BR>
+
+<A href="http://www.linuxcnc.org/"><IMG src="de/linuxcnc_compatible.png"></A><BR>
+
+<BR>
+<BR>
+<BR>
+<BR>
+</BODY>
+</HTML>
