move png files to pics/

--- a/de/rotary-mode.html
+++ b/de/rotary-mode.html
@@ -4,15 +4,15 @@
 <STYLE>
 	body {
 		background-color: #000000;
-		background-image: url('bg.png');
+		background-image: url('../pics/bg.png');
 		color: #FFFFFF;
 	}
 </STYLE>
 </HEAD>
 <BODY>
-<IMG src="logo.png">
+<IMG src="../pics/logo.png">
 <HR>
-<A href="sc_rotary.png"><IMG width="600px" src="sc_rotary.png" align="right"></A>
+<A href="../pics/sc_rotary.png"><IMG width="600px" src="../pics/sc_rotary.png" align="right"></A>
 <H2>Rotary-Mode</H2>
 
 Rotaymode nutzt man um über eine 4. Achse(Drehache) auf runden Materialien zu Fräsen
