--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <STYLE>
 	body {
 		background-color: #000000;
-		background-image: url('de/bg.png');
+		background-image: url('pics/bg.png');
 		color: #FFFFFF;
 	}
 	a {
@@ -12,9 +12,9 @@
 </STYLE>
 </HEAD>
 <BODY>
-<IMG src="de/logo.png">
+<IMG src="pics/logo.png">
 <HR>
-<A href="de/cammill.png"><IMG width="600px" src="de/cammill.png" align="right"></A>
+<A href="pics/cammill.png"><IMG width="600px" src="pics/cammill.png" align="right"></A>
 <H2>Features</H2>
 	<LI>Automatic Offsets (Inside / Outside)
 	<LI>Normal and Climb milling
@@ -49,32 +49,32 @@
 <TR><TD>
 
 <B>Mainview</B><BR>
-<A href="de/sc_main.png"><IMG width="300px" src="de/sc_main.png"></A>
+<A href="pics/sc_main.png"><IMG width="300px" src="pics/sc_main.png"></A>
 
 </TD><TD>
 
 <B>Rotary-Mode / 4. Axis</B><BR>
-<A href="de/sc_rotary.png"><IMG width="300px" src="de/sc_rotary.png"></A>
+<A href="pics/sc_rotary.png"><IMG width="300px" src="pics/sc_rotary.png"></A>
 
 </TD><TD>
 
 <B>Holding-Tab's</B><BR>
-<A href="de/sc_tabgrid.png"><IMG width="300px" src="de/sc_tabgrid.png"></A>
+<A href="pics/sc_tabgrid.png"><IMG width="300px" src="pics/sc_tabgrid.png"></A>
 
 </TD></TR><TR><TD>
 
 <B>Postprocessor-Output</B><BR>
-<A href="de/sc_output.png"><IMG width="300px" src="de/sc_output.png"></A>
+<A href="pics/sc_output.png"><IMG width="300px" src="pics/sc_output.png"></A>
 
 </TD><TD>
 
 <B>Postprocessor-Script</B><BR>
-<A href="de/sc_post.png"><IMG width="300px" src="de/sc_post.png"></A>
+<A href="pics/sc_post.png"><IMG width="300px" src="pics/sc_post.png"></A>
 
 </TD><TD>
 
 <B>Output in Linux-CNC</B><BR>
-<A href="de/sc_linuxcnc.png"><IMG width="300px" src="de/sc_linuxcnc.png"></A>
+<A href="pics/sc_linuxcnc.png"><IMG width="300px" src="pics/sc_linuxcnc.png"></A>
 
 
 </TD></TR>
@@ -86,7 +86,7 @@
 <BR>
 <BR>
 
-<A href="http://www.linuxcnc.org/"><IMG src="de/linuxcnc_compatible.png"></A><BR>
+<A href="http://www.linuxcnc.org/"><IMG src="pics/linuxcnc_compatible.png"></A><BR>
 
 <BR>
 <BR>
