--- a/de/cmdline.html
+++ b/de/cmdline.html
@@ -4,13 +4,13 @@
 <STYLE>
 	body {
 		background-color: #000000;
-		background-image: url('bg.png');
+		background-image: url('../pics/bg.png');
 		color: #FFFFFF;
 	}
 </STYLE>
 </HEAD>
 <BODY>
-<IMG src="logo.png">
+<IMG src="../pics/logo.png">
 <HR>
 <H2>Commandline-Options</H2>
 <BR>
