--- a/de/objects.html
+++ b/de/objects.html
@@ -4,15 +4,15 @@
 <STYLE>
 	body {
 		background-color: #000000;
-		background-image: url('bg.png');
+		background-image: url('../pics/bg.png');
 		color: #FFFFFF;
 	}
 </STYLE>
 </HEAD>
 <BODY>
-<IMG src="logo.png">
+<IMG src="../pics/logo.png">
 <HR>
-<A href="sc_objects.png"><IMG width="600px" src="sc_objects.png" align="right"></A>
+<A href="../pics/sc_objects.png"><IMG width="600px" src="../pics/sc_objects.png" align="right"></A>
 <H2>Objects</H2>
 
 Objekt-Parameter
