--- a/de/machine.html
+++ b/de/machine.html
@@ -26,7 +26,7 @@ Zum berechnen der minimalen Fräszeit (Optional)
 </BLOCKQUOTE>
 <LI>Post:<BR>
 <BLOCKQUOTE>
-Auswahl des Postprozessor, dieser bereitet die Ausgaben für verschiedene CNC-Kontroller auf (basierend auf LUA-Scripte / kompatibel mit dem Sheetcam-Postprozessor)
+Auswahl des Postprozessors, dieser bereitet die Ausgaben für verschiedene CNC-Kontroller auf (basierend auf Lua-Skripte / kompatibel mit <a href="http://www.sheetcam.com/">Sheetcam</a>)
 </BLOCKQUOTE>
 <BR>
 <BR>
