--- a/de/objects.html
+++ b/de/objects.html
@@ -58,7 +58,7 @@ Frästiefe in mm (negativ)
 </BLOCKQUOTE>
 <LI>Holding-Tab's:<BR>
 <BLOCKQUOTE>
-aktiviert/deaktiviert <A href="holdings-tabs.html">Holding-Tab's</A> für dieses Objekt
+Aktiviert/deaktiviert <A href="holdings-tabs.html">Holding-Tab's</A> für dieses Objekt
 </BLOCKQUOTE>
 <LI>Order:<BR>
 <BLOCKQUOTE>
