--- a/de/tools.html
+++ b/de/tools.html
@@ -15,7 +15,7 @@
 <A href="../pics/sc_tool.png"><IMG width="600px" src="../pics/sc_tool.png" align="right"></A>
 <H2>Tool</H2>
 
-Rotaymode nutzt man um über eine 4. Achse(Drehache) auf runden Materialien zu Fräsen
+Rotaymode nutzt man, um über eine 4. Achse (Drehache) auf runden Materialien zu Fräsen
 
 <BR>
 <BR>
@@ -27,7 +27,7 @@ Auswahl eines Werkzeugs aus der Tooltabe (FREE bedeutet man kann die Parameter f
 
 <LI>Tool:<BR>
 <BLOCKQUOTE>
-Nummer des Werkzeugs (für die CNC-Software / Werkzeuwechsler)
+Nummer des Werkzeugs (für die CNC-Software / Werkzeugwechsler)
 </BLOCKQUOTE>
 
 <LI>Diameter:<BR>
@@ -37,22 +37,22 @@ Werkzeug-Durchmesser (zum berechnen des Offsets)
 
 <LI>CalcSpeed:<BR>
 <BLOCKQUOTE>
-Berchnete/Vorgeschlagene Werkzeug-Drehzahl (Umdreungen pro Minute / errechnet aus Material-Typ und Werkzeug-Daten)
+Berchnete / vorgeschlagene Werkzeug-Drehzahl (Umdreungen pro Minute / errechnet aus Material-Typ und Werkzeug-Daten)
 </BLOCKQUOTE>
 
 <LI>Speed:<BR>
 <BLOCKQUOTE>
-Werkzeug-Drehzahl (Umdreungen pro Minute)
+Werkzeug-Drehzahl (Umdrehungen pro Minute)
 </BLOCKQUOTE>
 
 <LI>Flutes:<BR>
 <BLOCKQUOTE>
-Anzahl der Schneiden des Werkzeugs (Optional zum berechnen des maximalen Vorschubs und der Drehzahl des Werkzeugs)
+Anzahl der Schneiden des Werkzeugs (Optional zum Berechnen des maximalen Vorschubs und der Drehzahl des Werkzeugs)
 </BLOCKQUOTE>
 
 <LI>Table:<BR>
 <BLOCKQUOTE>
-Pfad zur Tool-Table (im Linux-CNC format / Optional)
+Pfad zur Tool-Table (im LinuxCNC Format / Optional)
 </BLOCKQUOTE>
 <BR>
 <BR>
