--- a/index.html
+++ b/index.html
@@ -23,16 +23,26 @@
 	<LI>Tool/Material calculations for feedrate and tool-speed
 	<LI>Holding-Tab's
 	<LI>Support for milling MTEXT from dxf
-	<LI>LinuxCNC-Tooltable import
+	<LI>LinuxCNC tool table import
 	<LI>Setup-Presets
-	<LI>Post-Processor (with lua-script / compatible with sheetcam-tng)
-	<LI>Running under Linux and Mac-OSX (and maybe other Unix-Like Systems)
-	<LI>.....
+        <LI>Lua scriptable Post-Processor compatible with <A href="http://www.sheetcam.com/">SheetCam</A>
+        <LI>OpenGL GUI and batch-mode
+        <LI>Its Free!
 
+<H2>Missing features</H2>
+
+See <A HREF="https://github.com/cammill/cammill/issues/6">#6</A>. Please help <A href="https://crowdin.com/project/cammill">translate CAMmill</A> to your language.
 
 <BR><BR><BR><BR><BR><BR><BR><BR><BR><BR>
 <HR>
-<H2>Documentation (German)</H2>
+<H2>Documentation</H2>
+
+<H3>English</H3>
+
+To be written..
+
+<H3>German</H3>
+
 <A href="de/tools.html">Tools</A><BR>
 <A href="de/milling.html">Milling</A><BR>
 <A href="de/holdings-tabs.html">Holding-Tab's</A><BR>
