--- a/de/cmdline.html
+++ b/de/cmdline.html
@@ -52,7 +52,7 @@ cammill [OPTIONS] FILE<BR>
 <BLOCKQUOTE><LI>-hu: Holding-Tabs-Activate (using holding-tabs) (0/1)</BLOCKQUOTE>
 <BLOCKQUOTE><LI>-tg: Holding-Tabs-Show Grid (show tab-grid) (0/1)</BLOCKQUOTE>
 <BLOCKQUOTE><LI>-htd: Holding-Tabs-Depth (depth of the holding-tabs) (DOUBLE)</BLOCKQUOTE>
-<BLOCKQUOTE><LI>-htl: Holding-Tabs-Lenght (lenght of the holding-tabs) (DOUBLE)</BLOCKQUOTE>
+<BLOCKQUOTE><LI>-htl: Holding-Tabs-Length (length of the holding-tabs) (DOUBLE)</BLOCKQUOTE>
 <BLOCKQUOTE><LI>-htt: Holding-Tabs-Triangle-Type (type of the holding-tabs) (0/1)</BLOCKQUOTE>
 <BLOCKQUOTE><LI>-ht: Holding-Tabs-On Open (holding-tabs on open contours) (0/1)</BLOCKQUOTE>
 <BLOCKQUOTE><LI>-hti: Holding-Tabs-On Inside (holding-tabs on inside-contours) (0/1)</BLOCKQUOTE>
