--- a/de/cmdline.html
+++ b/de/cmdline.html
@@ -38,7 +38,7 @@ cammill [OPTIONS] FILE<BR>
 <BLOCKQUOTE><LI>-pr: Milling-PlungeRate (plunge feedrate) (INT)</BLOCKQUOTE>
 <BLOCKQUOTE><LI>-md: Milling-Depth (end depth) (DOUBLE)</BLOCKQUOTE>
 <BLOCKQUOTE><LI>-msp: Milling-Z-Step (depth per step) (DOUBLE)</BLOCKQUOTE>
-<BLOCKQUOTE><LI>-msm: Milling-Save-Move (save move z-position) (DOUBLE)</BLOCKQUOTE>
+<BLOCKQUOTE><LI>-msm: Milling-Safe-Move (safe move z-position) (DOUBLE)</BLOCKQUOTE>
 <BLOCKQUOTE><LI>-oc: Milling-Overcut (overcutting edges) (0/1)</BLOCKQUOTE>
 <BLOCKQUOTE><LI>-lm: Milling-Lasermode (lasermode, depth=0.0, turn on/off per object) (0/1)</BLOCKQUOTE>
 <BLOCKQUOTE><LI>-mr: Milling-Climb (reverse milling direction / climb milling) (0/1)</BLOCKQUOTE>
@@ -48,7 +48,7 @@ cammill [OPTIONS] FILE<BR>
 <BLOCKQUOTE><LI>-vm: Milling-Velocity-Mode (Velocity-Mode G61/G64 P...) (0/1)</BLOCKQUOTE>
 <BLOCKQUOTE><LI>-bt: Milling-Blending Tolerance (Blending Tolerance G64 P?) (DOUBLE)</BLOCKQUOTE>
 <BLOCKQUOTE><LI>-mt: Milling-Mill Text (mill mtext from dxf-files) (0/1)</BLOCKQUOTE>
-<BLOCKQUOTE><LI>-nd: Milling-NC-Debug (output objects whithout offsets / for debuging) (0/1)</BLOCKQUOTE>
+<BLOCKQUOTE><LI>-nd: Milling-NC-Debug (output objects without offsets / for debugging) (0/1)</BLOCKQUOTE>
 <BLOCKQUOTE><LI>-hu: Holding-Tabs-Activate (using holding-tabs) (0/1)</BLOCKQUOTE>
 <BLOCKQUOTE><LI>-tg: Holding-Tabs-Show Grid (show tab-grid) (0/1)</BLOCKQUOTE>
 <BLOCKQUOTE><LI>-htd: Holding-Tabs-Depth (depth of the holding-tabs) (DOUBLE)</BLOCKQUOTE>
