--- a/de/milling.html
+++ b/de/milling.html
@@ -40,7 +40,7 @@ Frästiefe in mm (negativ)
 <BLOCKQUOTE>
 Frästiefe pro Durchgang in mm (negativ)
 </BLOCKQUOTE>
-<LI>Save-Move:<BR>
+<LI>Safe-Move:<BR>
 <BLOCKQUOTE>
 Abstand zum Material für schnelle Bewegungen in mm (positiv)
 </BLOCKQUOTE>
