--- a/index.html
+++ b/index.html
@@ -39,17 +39,21 @@ See <A HREF="https://github.com/cammill/cammill/issues/6">#6</A>. Please help <A
 
 <H3>English</H3>
 
-To be written..
+<ul>
+  <li><A href="https://github.com/cammill/cammill/issues/12">To be written..</A></li>
+</ul>
 
 <H3>German</H3>
 
-<A href="de/tools.html">Tools</A><BR>
-<A href="de/milling.html">Milling</A><BR>
-<A href="de/holdings-tabs.html">Holding-Tab's</A><BR>
-<A href="de/rotary-mode.html">Rotary-Mode</A><BR>
-<A href="de/machine.html">Machine</A><BR>
-<A href="de/objects.html">Objects</A><BR>
-<A href="de/cmdline.html">Commandline-Options</A><BR>
+<ul>
+	<li><A href="de/tools.html">Tools</A></li>
+	<li><A href="de/milling.html">Milling</A></li>
+	<li><A href="de/holdings-tabs.html">Holding-Tab's</A></li>
+	<li><A href="de/rotary-mode.html">Rotary-Mode</A></li>
+	<li><A href="de/machine.html">Machine</A></li>
+	<li><A href="de/objects.html">Objects</A></li>
+	<li><A href="de/cmdline.html">Commandline-Options</A></li>
+</ul>
 
 <HR>
 <H2>Screenshots</H2>
