Add english translation.

--- a/index.html
+++ b/index.html
@@ -40,19 +40,25 @@ See <A HREF="https://github.com/cammill/cammill/issues/6">#6</A>. Please help <A
 <H3>English</H3>
 
 <ul>
-  <li><A href="https://github.com/cammill/cammill/issues/12">To be written..</A></li>
+	<li><A href="en/tools.html">Tools</A></li>
+	<li><A href="en/milling.html">Milling</A></li>
+	<li><A href="en/holdings-tabs.html">Holding-Tab's</A></li>
+	<li><A href="en/rotary-mode.html">Rotary-Mode</A></li>
+	<li><A href="en/machine.html">Machine</A></li>
+	<li><A href="en/objects.html">Objects</A></li>
+	<li><A href="en/cmdline.html">Commandline-Options</A></li>
 </ul>
 
 <H3>German</H3>
 
 <ul>
-	<li><A href="de/tools.html">Tools</A></li>
-	<li><A href="de/milling.html">Milling</A></li>
-	<li><A href="de/holdings-tabs.html">Holding-Tab's</A></li>
-	<li><A href="de/rotary-mode.html">Rotary-Mode</A></li>
-	<li><A href="de/machine.html">Machine</A></li>
-	<li><A href="de/objects.html">Objects</A></li>
-	<li><A href="de/cmdline.html">Commandline-Options</A></li>
+	<li><A href="de/tools.html">Werkzeuge</A></li>
+	<li><A href="de/milling.html">Fräsen</A></li>
+	<li><A href="de/holdings-tabs.html">Haltelaschen</A></li>
+	<li><A href="de/rotary-mode.html">Rotary-Modus</A></li>
+	<li><A href="de/machine.html">Maschine</A></li>
+	<li><A href="de/objects.html">Objekte</A></li>
+	<li><A href="de/cmdline.html">Kommandozeilen-Optionen</A></li>
 </ul>
 
 <HR>
