--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@ See <A HREF="https://github.com/cammill/cammill/issues/6">#6</A>. Please help <A
 <BR>
 <BR>
 
-<A href="http://www.linuxcnc.org/"><IMG src="pics/linuxcnc_compatible.png"></A><BR>
+<A href="https://linuxcnc.org/"><IMG src="pics/linuxcnc_compatible.png"></A>&nbsp;
+<A href="https://github.com/gnea/grbl#readme"><IMG src="pics/grbl_compatible.png></A><BR>
 
 <BR>
 <BR>
