--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ See <A HREF="https://github.com/cammill/cammill/issues/6">#6</A>. Please help <A
 <BR>
 
 <A href="https://linuxcnc.org/"><IMG src="pics/linuxcnc_compatible.png"></A>&nbsp;
-<A href="https://github.com/gnea/grbl#readme"><IMG src="pics/grbl_compatible.png></A><BR>
+<A href="https://github.com/gnea/grbl#readme"><IMG src="pics/grbl_compatible.png"></A><BR>
 
 <BR>
 <BR>
